@startuml
'https://plantuml.com/class-diagram

class CargoManifestPerYearUI{

}

class CargoManifestPerYearController{
- shipExists(mmsiCode : String) : boolean
- getNumberOfContainerPerManifest(mmsiCode : String) : float
- getTheCargoManifestPerYear(mmsiCode : String, year : int) : int
}

class Company {
-getBstShip() : BstShip
-getCargoManifestStore() : CargoManifestStore
}

class CargoManifestStore{
- getNumberOfContainerPerManifest(mmsiCode : String) : float
- getTheCargoManifestPerYear(mmsiCode : String, year : int) : int

}


CargoManifestPerYearUI ..> CargoManifestPerYearController
CargoManifestPerYearController ..> Company
Company -> CargoManifestStore : uses
@enduml